--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  background: #181818;
-  color: #fff;
+  background: #2C3639;
   overflow: hidden;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -15,6 +14,27 @@ code {
     monospace;
 }
 
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-track {
+  background: rgba(0,0,0,0);;
+  margin-block: 3px;
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #ffffff;
+  border-radius: 5px;
+  border: 1px solid #3F4E4F;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  border: 20px solid #ffffff;
+}
+
 * {
   box-sizing: border-box;
+  border-radius: 3px;
 }
