--- a/src/features/TodoApp/DailyTodo/DailyTask/DailyTask.scss
+++ b/src/features/TodoApp/DailyTodo/DailyTask/DailyTask.scss
@@ -1,14 +1,19 @@
 .daily-task {
-    position: absolute;
-    // width: 100%;
+    position: relative;
+    width: 100%;
     height: max-content;
     background-color: aliceblue;
+    margin: 2px;
+    padding: 10px 20px;
+    display: flex;
 
     &-checkbox {
-
+        margin-left: 0;
     }
 
     &-name {
-
+        margin-left: 10px;
+        overflow-wrap: break-word;
+        overflow-x: hidden;
     }
 }
