--- a/src/features/TodoApp/DailyTodo/DailyTodo.scss
+++ b/src/features/TodoApp/DailyTodo/DailyTodo.scss
@@ -4,11 +4,16 @@
     height: 310px;
     top: 0;
     right: 0;
-    background-color: aqua;
+    // background-color: #DCD7C9;
+    border: #c7c4c4 3px solid;
 
     &-everyday {
+        height: 100%;
+        overflow-y: hidden;
+
 
         &-label {
+            color: #c7c4c4;
             display: block;
             position: relative;
             margin: 10px 0;
@@ -19,8 +24,28 @@
         }
 
         &-tasks {
+            align-items: center;
+            position: relative;
+            height: 230px;
+            width: 335px;
+            overflow-y: hidden;
+            overflow-x: hidden;
             margin: 0 20px 10px;
-            
+
+            &:hover {
+                overflow-y: scroll;
+                width: 342px;
+            }
+
+            &::-webkit-scrollbar-thumb {
+                background-color:#c7c4c4;
+                border-radius: 5px;
+                // border: 2px solid #3F4E4F;
+            }
+
+            &::-webkit-scrollbar {
+                width: 7px;
+            }
         }
     }
 
@@ -29,7 +54,11 @@
         bottom: 0;
         width: 100%;
         height: 30px;
-        background-color: #D9D9D9;
+        background-color: #c7c4c4;
         
+        &:hover {
+            cursor: pointer;
+            background-color: #e6e6e6;
+        }
     }
 }
