--- a/src/pages/MyManagement/MyManagement.scss
+++ b/src/pages/MyManagement/MyManagement.scss
@@ -24,7 +24,7 @@
             }
         }
 
-        .app-center-links {
+        .my-management-links {
             width: 200px;
             height: 50px;
             display: flex;
