--- a/src/pages/Portfolio/Portfolio.scss
+++ b/src/pages/Portfolio/Portfolio.scss
@@ -1,16 +1,11 @@
 .portfolio {
     width: 100vw;
     height: 100vh;
-    &-scroll-wrapper-top, &-scroll-wrapper-2-top {
-        opacity: .6;
-        position: fixed;
-        top: 0;
-        left: 50%;
-        transform: scale(3);
-        margin-bottom: 30px;
-        margin-top: 30px;
+
+    @keyframes bottomShowOn {
+        from  {color: greenyellow;}
+        to {color:black}
     }
-    &-scroll-wrapper-2-top {
-        margin-top: 54px;
-    }
+
+    transition: all 1s ease;
 }
