add avatar and 3d global

--- a/src/pages/Portfolio/Portfolio.scss
+++ b/src/pages/Portfolio/Portfolio.scss
@@ -3,7 +3,7 @@
     height: 100vh;
 
     @keyframes bottomShowOn {
-        from  {color: greenyellow;}
+        from  {color: #20C20E;}
         to {color:black}
     }
 
