--- a/src/components/Portfolio/PortfolioContent/PortfolioContentAvatar/PortfolioContentAvatar.scss
+++ b/src/components/Portfolio/PortfolioContent/PortfolioContentAvatar/PortfolioContentAvatar.scss
@@ -10,7 +10,16 @@
     }
 
     &-info {
-        padding: 10px;
-        color: green
+        display: flex;
+        height: 250px;
+        width: max-content;
+        // padding: 0;
+        color: green;
+        align-items: center;
+
+        p {
+            padding: 20px;
+            margin: auto;
+        }
     }
 }
