--- a/frontend/src/components/Portfolio/PortfolioContent/PortfolioContent.scss
+++ b/frontend/src/components/Portfolio/PortfolioContent/PortfolioContent.scss
@@ -1,4 +1,6 @@
 .portfolio-content {
+    position: absolute;
+    display: flex;
     width: 100vw;
     height: 90vh;
     background-color: black;
