--- a/frontend/src/components/Portfolio/PortfolioContent/Skill/Skill.scss
+++ b/frontend/src/components/Portfolio/PortfolioContent/Skill/Skill.scss
@@ -7,4 +7,35 @@
     overflow: hidden;
     color: green;
 
+    #skill-os {
+        position: absolute;
+        top: 10px;
+    }
+
+    #skill-database {
+        position: absolute;
+        top: 50px;
+    }
+
+    #skill-web {
+        position: absolute;
+        top: 90px;
+    }
+
+    #skill-devops {
+        position: absolute;
+        top: 130px;
+    }
+
+    #skill-tool {
+        position: absolute;
+        top: 170px;
+    }
+
+    #skill-other {
+        position: absolute;
+        top: 210px;
+    }
+
+
 }
