--- a/frontend/src/components/Portfolio/PortfolioContent/SkillItem/SkillItem.scss
+++ b/frontend/src/components/Portfolio/PortfolioContent/SkillItem/SkillItem.scss
@@ -3,36 +3,62 @@ $tagHeight: 30px;
 .skill-item {
     display: flex;
     height: $tagHeight;
-    // border: 1px solid green;
-    // border-radius: 0;
-    margin: 30px 70px;
-    background-color:beige;
+    // background-color:beige;
+    overflow:visible;
 
     &-label {
         position: relative;
-        // width: auto;
         font-size:large;
         font-weight: 600;
         line-height: $tagHeight;
-        // text-align: start;
         margin-bottom: -100px;
         letter-spacing: .8px;
         text-transform: capitalize;
         height: inherit;
         padding: 0 15px;
-        // background-color: green;
         color: green;
     }
 
     &-items {
-        display: flex;
         font-size: medium;
-        &-child {
-            margin: 0 5px;
-            padding: 0 5px;
-            border: 1px solid green;
-            line-height: $tagHeight - 1px;
-            text-transform: capitalize;
+        position: relative;
+        width: 100%;
+        $itemsWidth: width;
+        // background-color: yellow;
+        right: 10px;
+        overflow: hidden;
+
+        &-container {
+            // background-color: red;
+            width: fit-content;
+            display: inline-block;
+            .skill-item-items-child {
+                margin: 0 5px;
+                padding: 0 5px;
+                border: 1px solid green;
+                line-height: $tagHeight - 1px;
+                text-transform: capitalize;
+            }
         }
+
+        .skill-animation {
+            animation-name: left-right;
+            animation-iteration-count: infinite;
+            animation-timing-function: linear;
+            animation-direction: alternate;
+
+            @keyframes left-right {
+                from {
+                    transform: translateX(0);
+                    left: 0;
+                }
+    
+                to {
+                    left: 100%;
+                    transform: translateX(-100%);
+                }
+            }
+        }
+
     }
 }
