--- a/frontend/src/components/Portfolio/PortfolioContent/Experience/Experience.scss
+++ b/frontend/src/components/Portfolio/PortfolioContent/Experience/Experience.scss
@@ -1,10 +1,8 @@
 .portfolio-experience {
-    position: relative;
-    overflow: hidden;
-    width: 300px;
-    margin: 10px;
-    // background-color: yellow;
+    min-height: 450px;
+    height: 495px;
     border: 1px dotted green;
+    margin-bottom: 5px;
 
     .label-rotate {
         left: -55px;
