--- a/frontend/src/components/Portfolio/PortfolioContent/Skill/Skill.scss
+++ b/frontend/src/components/Portfolio/PortfolioContent/Skill/Skill.scss
@@ -2,9 +2,9 @@ $os_left_position: 80px;
 $database_left_position: 40px;
 
 .portfolio-skill {
-    width: 600px;
+    width: 100%;
     height: 250px;
-    margin: 10px auto;
+    margin: 10px 5px 0 0;
     position: relative;
     border: 1px dotted green; 
     overflow: hidden;
@@ -43,6 +43,4 @@ $database_left_position: 40px;
         position: absolute;
         top: 210px;
     }
-
-
 }
