--- a/frontend/src/components/Portfolio/PortfolioContent/Certificate/Certificate.scss
+++ b/frontend/src/components/Portfolio/PortfolioContent/Certificate/Certificate.scss
@@ -1,7 +1,8 @@
+$certificate-height: 150px;
 .portfolio-certificate {
     position: relative;
     bottom: 10px;
-    height: 300px;
+    height: $certificate-height;
     margin: 0;
     overflow: hidden;
     border: 1px dotted green;
