--- a/frontend/src/components/Portfolio/PortfolioHeader/PortfolioHeader.scss
+++ b/frontend/src/components/Portfolio/PortfolioHeader/PortfolioHeader.scss
@@ -1,5 +1,7 @@
+$header-height: 80px;
+
 .portfolio-header {
     width: 100vw;
-    height: 10vh;
+    height: $header-height;
     background-color: black;
 }
