--- a/frontend/src/components/Portfolio/PortfolioContent/ExperienceTimeline/ExperienceTimeline.scss
+++ b/frontend/src/components/Portfolio/PortfolioContent/ExperienceTimeline/ExperienceTimeline.scss
@@ -31,7 +31,7 @@
                 }
 
                 .company-timeline {
-                    font-size: smaller;
+                    font-size: 12px;
                 }
             }
         }
