--- a/frontend/src/components/Portfolio/PortfolioContent/Certificate/Certificate.scss
+++ b/frontend/src/components/Portfolio/PortfolioContent/Certificate/Certificate.scss
@@ -5,7 +5,7 @@ $certificate-height: 150px;
     height: $certificate-height;
     margin: 0;
     overflow: hidden;
-    border: 1px dotted green;
+    border: 1px solid green;
 
     .label-rotate {
         left: -35px;
