--- a/frontend/src/components/Portfolio/PortfolioContent/Skill/Skill.scss
+++ b/frontend/src/components/Portfolio/PortfolioContent/Skill/Skill.scss
@@ -6,7 +6,7 @@ $database_left_position: 40px;
     height: 250px;
     margin: 10px 5px 0 0;
     position: relative;
-    border: 1px dotted green; 
+    border: 1px solid green; 
     overflow: hidden;
     color: green;
 
