--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -56,6 +56,6 @@ code {
   box-sizing: border-box;
   border-radius: 3px;
   scrollbar-color: green;
-  color: green;
+  // color: green;
   // background-color: black;
 }
