--- a/frontend/src/components/Portfolio/PortfolioHeader/PortfolioHeader.scss
+++ b/frontend/src/components/Portfolio/PortfolioHeader/PortfolioHeader.scss
@@ -8,6 +8,7 @@ $contact-width: 30%;
     width: 100%;
     height: 70px;
     background-color: black;
+    padding-top: 5px;
 
     &-logo {
         position: absolute;
