--- a/frontend/src/components/Portfolio/PortfolioScrollWrapper/PortfolioScrollWrapper.scss
+++ b/frontend/src/components/Portfolio/PortfolioScrollWrapper/PortfolioScrollWrapper.scss
@@ -7,12 +7,13 @@
         position: absolute;
         transform: scale(2);
         opacity: .6;
-        animation-delay: 10s;
-        animation: bottomShowOn;
+        animation-name: bottomShowOn;
+        animation-delay: 1s;
         animation-duration: 1s;
         animation-iteration-count: infinite;
-        animation-direction:alternate;
-        animation-fill-mode:both;
+        animation-direction: alternate;
+        animation-fill-mode: both;
+
     }
 
     &-item-2 {
