--- a/frontend/src/components/Portfolio/PortfolioHeader/PortfolioContactItem/PortfolioContactItem.scss
+++ b/frontend/src/components/Portfolio/PortfolioHeader/PortfolioContactItem/PortfolioContactItem.scss
@@ -42,9 +42,12 @@
         width: fit-content;
         height: fit-content;
         background-color: black;
-        padding: 10px 0px;
+        // padding: 10px 0px;
         z-index: 1;
         right: 5px;
-        // border: 1px solid green;
+        border: 1px solid green;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 }
