--- a/frontend/src/components/Portfolio/PortfolioHeader/PortfolioContact/PortfolioContact.scss
+++ b/frontend/src/components/Portfolio/PortfolioHeader/PortfolioContact/PortfolioContact.scss
@@ -34,7 +34,16 @@ $contact-width: 30%;
 
     &-leave-message {
         padding: 5px;
+        background-color: green;;
         &-frame {
+
+            & > input {
+                border-color: black;
+                padding: 0;
+                margin: 0;
+                outline: none;
+            }    
+
             & > input, button {
                 background-color: black;
                 color: green;
@@ -75,16 +84,17 @@ $contact-width: 30%;
 
     &-contact-me {
 
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
+        // display: flex;
+        // align-items: center;
+        // justify-content: center;
+        // flex-direction: column;
         // padding: 5px;
         & > * {
             position: relative;
             & > p {
                 padding: 5px;
-                margin: 0;
+                margin: auto;
+                text-align: center;
             }
         }
 
@@ -97,6 +107,7 @@ $contact-width: 30%;
             z-index: 10;
             top: 0;
             left: 0;
+
             display: flex;
             align-items: center;
             justify-content: center;
@@ -104,6 +115,12 @@ $contact-width: 30%;
             & > *:hover {
                 opacity: .5;
                 cursor: pointer;
+            }
+
+            #copied {
+                position: absolute;
+                right: 25px;
+                color: red;
             }
         }
 
