--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -3,7 +3,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  background: #2C3639;
+  background: black;
   overflow: hidden;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -56,6 +56,4 @@ code {
   box-sizing: border-box;
   border-radius: 3px;
   scrollbar-color: green;
-  // color: green;
-  // background-color: black;
 }
