--- a/frontend/src/screens/Portfolio/PortfolioContent/PortfolioContent.scss
+++ b/frontend/src/screens/Portfolio/PortfolioContent/PortfolioContent.scss
@@ -1,23 +1,30 @@
-@import "../PortfolioHeader/PortfolioHeader.scss/";
-
 .portfolio-content {
-    position: absolute;
-    display: flex;
-    width: 100vw;
-    height: calc(100% - $header-height);
-    background-color: black;
-    // margin-top: -10px;
 
-    .right-side {
-        position: relative;
-        right: 5px;
-        overflow: hidden;
-        width: 950px;
-        // width: 350px;
-        min-height: auto;
-        margin: 10px 5px 0 10px;
-        display: flex;
-        flex-direction:column;
-        justify-content:space-between;
+    position: relative;
+    height: 100%;
+    width: 100vw;
+    // background-color: black;
+
+    display: grid;
+    gap: 7px;
+    padding: 10px;
+    grid-template-columns: 840px auto 344px;
+    grid-template-rows: 250px auto 200px;
+
+
+    &-skill {
+    }
+
+    &-experience {
+        grid-area: 1 / 3 / 3 / 3;
+        margin-bottom: 11px;
+    }
+
+    &-certificate {
+        grid-area: 3 / 3 / 3 / 3;
+    }
+
+    &-app {
+        grid-area: 2 / 1 / 4 / 3;
     }
 }
