--- a/frontend/src/screens/Portfolio/PortfolioContent/AppCenter/AppCenter.scss
+++ b/frontend/src/screens/Portfolio/PortfolioContent/AppCenter/AppCenter.scss
@@ -2,9 +2,34 @@
 @import "../../PortfolioHeader/PortfolioHeader.scss";
 
 .app-center {
-    border: 1px solid green;
-
-    display: grid;
-    gap: 2px;
+    // border: 1px solid green;
+    height: 100%;
+    width: 100%;
+    background-color: bisque;
     
+    display: grid;
+    grid-template-columns: 700px auto 700px;
+    grid-template-rows: 130px auto 110px;
+    gap: 10px;
+    padding: 10px;
+
+    & > * {
+        background-color: azure;
+    }
+    
+    &-access {
+        grid-area: 1 / 1 / 1 / 1;
+    }
+
+    &-commit {
+        grid-area: 1 / 3 / 2 / 3;
+    }
+
+    &-apps {
+        grid-area: 2 / 1 / 2 / 4;
+    }
+    
+    &-bottom {
+        grid-area: 3 / 1 / 3 / 4;
+    }
 }
