--- a/frontend/src/screens/Portfolio/PortfolioContent/Certificate/Certificate.scss
+++ b/frontend/src/screens/Portfolio/PortfolioContent/Certificate/Certificate.scss
@@ -1,8 +1,7 @@
 $certificate-height: 150px;
 .portfolio-certificate {
     position: relative;
-    bottom: 10px;
-    height: $certificate-height;
+    height: 100%;
     margin: 0;
     overflow: hidden;
     border: 1px solid green;
