--- a/frontend/src/screens/Portfolio/PortfolioContent/PortfolioContent.scss
+++ b/frontend/src/screens/Portfolio/PortfolioContent/PortfolioContent.scss
@@ -1,15 +1,20 @@
+@import "../PortfolioHeader/PortfolioHeader.scss";
+
 .portfolio-content {
-
     position: relative;
-    height: 100%;
+    height: calc(100% - $header-height);
     width: 100vw;
-    // background-color: black;
-
     display: grid;
     gap: 7px;
     padding: 10px;
+    margin-bottom: 0;
     grid-template-columns: 840px auto 344px;
     grid-template-rows: 250px auto 200px;
+
+    background-color: #fff;
+     & > * {
+        background-color: antiquewhite;
+     }
 
 
     &-skill {
@@ -17,7 +22,6 @@
 
     &-experience {
         grid-area: 1 / 3 / 3 / 3;
-        margin-bottom: 11px;
     }
 
     &-certificate {
@@ -25,6 +29,8 @@
     }
 
     &-app {
-        grid-area: 2 / 1 / 4 / 3;
+        grid-area: 4 / 1 / 2 / 3;
+        border : 1px solid green;
+        bottom: 0;
     }
 }
