--- a/frontend/src/features/Portfolio/PortfolioContent/AppCenter/AppCenter.scss
+++ b/frontend/src/features/Portfolio/PortfolioContent/AppCenter/AppCenter.scss
@@ -17,19 +17,19 @@
         background-color: azure;
     }
     
-    &-access {
+    &-access_frequency {
         grid-area: 1 / 1 / 1 / 1;
     }
 
-    &-commit {
+    &-activity_frequency {
         grid-area: 1 / 3 / 2 / 3;
     }
 
-    &-apps {
+    &-app_working {
         grid-area: 2 / 1 / 2 / 4;
     }
     
-    &-bottom {
+    &-explore_more {
         grid-area: 3 / 1 / 3 / 4;
     }
 }
