--- a/frontend/src/features/Portfolio/components/AppWorking/AppWorking.scss
+++ b/frontend/src/features/Portfolio/components/AppWorking/AppWorking.scss
@@ -4,41 +4,101 @@ $forcus_toolbar-width: 350px;
     position: relative;
     width: 100%;
     height: 100%;
-    overflow-x: scroll;
 
-    // &-left_side, &-right_side {
-    //     width: $forcus_toolbar-width;
-    //     height: 100%;
-    //     background-color:beige;
-    // }
+    &-left_side, &-right_side {
+        width: $forcus_toolbar-width;
+        height: 100%;
+
+        z-index: 100;
+    }
     
-    // &-right_side {
-    //     position: absolute;
-    //     right: 0;
+    &-right_side {
+        position: absolute;
+        right: 0;
         
-    //     background-image: linear-gradient(to left, black , rgba(0,0,0,0));
-    //     border-radius: 150px 0 0 150px;
-    // }
+        background-image: linear-gradient(to left, black , rgba(0,0,0,0));
+        border-radius: 150px 0 0 150px;
+    }
 
 
-    // &-left_side {
-    //     position: absolute;
-    //     left: 0;
+    &-left_side {
+        position: absolute;
+        left: 0;
 
-    //     background-image: linear-gradient(to right, black , rgba(0,0,0,0));
-    //     border-radius: 0 150px 150px 0;
-    // }
+        background-image: linear-gradient(to right, black , rgba(0,0,0,0));
+        border-radius: 0 150px 150px 0;
+    }
 
     &-card-container {
         position: absolute;
         left: 0;
-        width: calc(100% + $forcus_toolbar-width + $forcus_toolbar-width);
+        width: 100%;
         height: 100%;
-        padding: 20px $forcus_toolbar-width;
-        // background-color: red;
+        overflow-x: scroll;
 
-        // background-color: red;
-        // TODO: add no wrapper for this
+        z-index: 10;
+
+        .app_working-strip_of_cards {
+            position: absolute;
+            height: 100%;
+            width: fit-content;
+            padding: 10px $forcus_toolbar-width;
+            
+            display: flex;
+            align-items: center;
+            justify-content: space-around;
+
+            .app_working-project_card {
+
+                position: relative;
+                width: 250px;
+                height: 100%;
+                background-color: red;
+                
+                margin: 0 20px;
+                padding: 20px;
+
+                box-shadow: 5px 3px green;
+                // border: .5px solid green;
+                background-image: linear-gradient(to bottom right, green, black);
+                border-radius: 5px;
+
+                &:hover {
+                    box-shadow: none;
+                    background-color: black;
+                    background-image: none;
+                    color: green;
+                }
+
+                &-project_name {
+                    height: 40px;
+                    padding-bottom: 10px;
+
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+
+                    font-weight: 700;
+                    font-size: large;
+                }
+
+                &-project_description {
+                    // text
+                }
+
+                &-access_btn {
+                    width: fit-content;
+                    background-color: green;
+                    color: black;
+                    text-decoration: none;
+
+                    > * {
+                        color: black;
+                        
+                    }
+                }
+
+            }
+        }
     }
-
 }
