--- a/frontend/src/features/Portfolio/components/CV/CV.scss
+++ b/frontend/src/features/Portfolio/components/CV/CV.scss
@@ -11,6 +11,7 @@
         width: 67%;
         height: 100%;
         background-color: antiquewhite;
+        padding: 10px 0 10px 10px;
         
         display: flex;
         flex-direction: column;
@@ -18,7 +19,8 @@
         &--profile {
 
             &--title {
-
+                display: flex;
+                align-items: center;
             }
 
             &--content {
@@ -42,6 +44,7 @@
         width: 33%;
         height: 100%;
         background-color: beige;
+        padding: 10px 0 10px 10px;
 
         &--name {
 
