--- a/src/features/Portfolio/PortfolioFooter/PortfolioFooter.scss
+++ b/src/features/Portfolio/PortfolioFooter/PortfolioFooter.scss
@@ -2,4 +2,9 @@
     width: 100vw;
     height: 100vh;
     background-color: black;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: green;
 }
