--- a/src/features/PortfolioHeader/PortfolioHeader.scss
+++ b/src/features/PortfolioHeader/PortfolioHeader.scss
@@ -20,6 +20,12 @@ $contact-width: 30%;
         display: flex;
         justify-content: center;
         align-items: center;
+
+        > img {
+            width: auto;
+            height: 80%;
+            transform: translateY(-3px);
+        }
     }
 
     &-quote {
