--- a/src/features/PortfolioContent/PortfolioContent.scss
+++ b/src/features/PortfolioContent/PortfolioContent.scss
@@ -8,8 +8,8 @@
     gap: 7px;
     padding: 10px;
     margin-bottom: 0;
-    grid-template-columns: 840px auto 344px;
-    grid-template-rows: 250px auto 200px;
+    grid-template-columns: 38% auto 18%;
+    grid-template-rows: 250px auto 23%;
 
     &-skill {
     }
