--- a/src/features/PortfolioContent/Avatar/Avatar.scss
+++ b/src/features/PortfolioContent/Avatar/Avatar.scss
@@ -1,30 +1,28 @@
 @import "../PortfolioContent.scss";
 
-$avatar-height: 250px;
-$avatar-width: 190px;
-
 .portfolio-avatar {
     position: relative;
-    height: $avatar-height;
+    height: 100%;
     display: flex;
     width: 100%;
 
     &-image {
         width: auto;
-        height: $avatar-height;
+        height: 100%;
         border: 5px solid green;
         border-radius: 0;
     }
 
     &-info {
         display: flex;
-        height: 250px;
-        width: 650px;
+        height: 100%;
+        width: 100%;
         color: green;
         border: 1px solid green;
         border-left: 0;
         box-sizing: border-box;
         align-items: center;
+        overflow: scroll;
 
         p {
             padding: 10px;
