--- a/src/features/components/AppWorking/AppWorking.scss
+++ b/src/features/components/AppWorking/AppWorking.scss
@@ -28,7 +28,7 @@ $forcus_toolbar-width: 300px;
         position: absolute;
         left: 0;
         width: 100%;
-        height: 100%;
+        height: 310px;
         overflow-x: scroll;
         z-index: 10;
 
