--- a/src/features/components/AppWorking/AppWorking.scss
+++ b/src/features/components/AppWorking/AppWorking.scss
@@ -3,7 +3,7 @@ $forcus_toolbar-width: 300px;
 .app_working {
     position: relative;
     width: 100%;
-    height: 100%;
+    height: 310px;
 
     &-left_side, &-right_side {
         width: $forcus_toolbar-width;
@@ -112,6 +112,15 @@ $forcus_toolbar-width: 300px;
                     }
                 }
             }
+        }
+    }
+}
+
+@media only screen and (max-width:1200px) {
+    .app_working {
+
+        &-left_side, &-right_side {
+            display: none;
         }
     }
 }
