--- a/src/features/PortfolioContent/Certificate/Certificate.scss
+++ b/src/features/PortfolioContent/Certificate/Certificate.scss
@@ -2,6 +2,7 @@ $certificate-height: 150px;
 .portfolio-certificate {
     position: relative;
     height: 100%;
+    min-height: 110px;
     margin: 0;
     overflow: hidden;
     border: 1px solid green;
