--- a/src/features/PortfolioContent/PortfolioContent.scss
+++ b/src/features/PortfolioContent/PortfolioContent.scss
@@ -5,26 +5,55 @@
     height: calc(100% - $header-height);
     width: 100vw;
     display: grid;
+    margin-bottom: 0;
     gap: 7px;
     padding: 10px;
-    margin-bottom: 0;
-    grid-template-columns: 38% auto 18%;
-    grid-template-rows: 250px auto 23%;
+}
 
-    &-skill {
+@media only screen and (min-width: 1781px) {
+    .portfolio-content {
+        grid-template-columns: 38% auto 18%;
+        grid-template-rows: 250px auto 23%;
+
+        &-skill {
+        }
+    
+        &-experience {
+            grid-area: 1 / 3 / 3 / 3;
+        }
+    
+        &-certificate {
+            grid-area: 3 / 3 / 3 / 3;
+        }
+    
+        &-app {
+            grid-area: 4 / 1 / 2 / 3;
+            // border : 1px solid green;
+            bottom: 0;
+        }
+    }
+}
+
+@media only screen and (max-width: 1780px) {
+    .portfolio-content {
+        grid-template-columns: 100%;
+        grid-template-rows: 250px 250px 120px 500px;
+
+        &-skill {
+            grid-area: 2 / 1;
+        }
+    
+        &-experience {
+            display: none;
+        }
+    
+        &-certificate {
+            grid-area: 3 / 1;
+        }
+    
+        &-app {
+            grid-area: 4 / 1;
+        }
     }
 
-    &-experience {
-        grid-area: 1 / 3 / 3 / 3;
-    }
-
-    &-certificate {
-        grid-area: 3 / 3 / 3 / 3;
-    }
-
-    &-app {
-        grid-area: 4 / 1 / 2 / 3;
-        // border : 1px solid green;
-        bottom: 0;
-    }
 }
