--- a/src/features/PortfolioHeader/PortfolioHeader.scss
+++ b/src/features/PortfolioHeader/PortfolioHeader.scss
@@ -40,3 +40,11 @@ $contact-width: 30%;
         align-items: center;
     }
 }
+
+@media only screen and (max-width:1200px) {
+    .portfolio-header {
+        &-quote {
+            display: none;
+        }
+    }
+}
