--- a/src/features/PortfolioScrollWrapper/PortfolioScrollWrapper.scss
+++ b/src/features/PortfolioScrollWrapper/PortfolioScrollWrapper.scss
@@ -41,3 +41,9 @@
         animation-timing-function: ease-out;
     }
 }
+
+@media only screen and (max-width:1200px) {
+    .portfolio-scroll-wrapper {
+        display: none;
+    }
+}
