update project name package.json

--- a/src/common/components/ScreenWrapper/ScreenWrapper.scss
+++ b/src/common/components/ScreenWrapper/ScreenWrapper.scss
@@ -19,9 +19,6 @@
     margin: 100px auto;
 }
 
-// #downdload-cv {
-//     position: relative;
-//     width: 100px;
-//     height: 100px;
-//     background-color: red;
-// }
+@media screen and (max-width: 620px) {
+
+}
