update responsive project-working padding strip of porject card

--- a/src/features/components/AppWorking/AppWorking.scss
+++ b/src/features/components/AppWorking/AppWorking.scss
@@ -122,5 +122,10 @@ $forcus_toolbar-width: 300px;
         &-left_side, &-right_side {
             display: none;
         }
+        &-card-container {
+            .app_working-strip_of_cards {
+                padding: 10px 100px;
+            }
+        }
     }
 }
