--- a/src/features/PortfolioContent/AppCenter/AppCenter.scss
+++ b/src/features/PortfolioContent/AppCenter/AppCenter.scss
@@ -10,48 +10,52 @@
     padding: 10px;
 }
 
-@media only screen and (min-width:1458px) {
+@media only screen and (min-width:1450px) {
     .app_center {
-        grid-template-columns: 700px auto 700px;
-        grid-template-rows: 130px auto 100px;
-        
+        grid-template-columns: auto 15px auto;
+        grid-template-rows: 180px auto 70px;
+
         &-access_frequency {
             grid-area: 1 / 1 / 1 / 1;
         }
-    
+
         &-activity_frequency {
-            grid-area: 1 / 3 / 2 / 3;
+            grid-area: 1 / 3 / 1 / 3;
         }
-    
+
         &-app_working {
             grid-area: 2 / 1 / 2 / 4;
         }
-        
+
         &-explore_more {
             grid-area: 3 / 1 / 3 / 4;
         }
     }
   }
 
-@media only screen and (max-width:1458px) {
+@media only screen and (max-width:1450px) {
     .app_center {
-        grid-template-columns: auto auto auto;
-        grid-template-rows: 130px auto 100px;
-        
+        grid-template-columns: 100%;
+        grid-template-rows: 150px 170px auto 70px;
+
         &-access_frequency {
+            display: flex;
+            justify-content: center;
             grid-area: 1 / 1 / 1 / 1;
         }
-    
+
         &-activity_frequency {
-            grid-area: 1 / 3 / 2 / 3;
+            display: flex;
+            justify-content: center;
+            grid-area: 2 / 1 / 2 / 1;
         }
-    
+
         &-app_working {
-            grid-area: 2 / 1 / 2 / 4;
+            grid-area: 3 / 1 / 3 / 1;
         }
-        
+
         &-explore_more {
-            grid-area: 3 / 1 / 3 / 4;
+            grid-area: 4 / 1 / 4 / 1;
         }
     }
   }
