--- a/src/features/components/AccessFrequency/AccessFrequency.scss
+++ b/src/features/components/AccessFrequency/AccessFrequency.scss
@@ -1,6 +1,9 @@
 #access-frequency {
     position: relative;
-    // background-color: red;
     width: 100%;
-    height: 100%; 
+    height: 140px;
+    max-width: 700px;
+    margin: auto;
+    margin-top: 15px;
+    border: 2px solid red;
 }
